fixed overflow on homepage

--- a/public/style.css
+++ b/public/style.css
@@ -122,7 +122,7 @@ footer a {
 =============== */
 
 main {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background:-webkit-gradient(linear, left top, right top, from(rgba(37,39,60,.4)), to(rgba(0,212,255,.4))), url("basketball_court.jpg");
   background:-o-linear-gradient(left, rgba(37,39,60,.4) 0%, rgba(0,212,255,.4) 100%), url("basketball_court.jpg");
